--- a/templates/slack.html
+++ b/templates/slack.html
@@ -4,4 +4,4 @@
 email: {{_replyto}}
 Задача: {{message}}
 
-Давайте с ним свяжемся и продадим наши услуги!
+Давайте с ним свяжемся и продадим наши услуги! @dandaka, вперед!
