one more field to go

--- a/templates/slack.html
+++ b/templates/slack.html
@@ -1,6 +1,7 @@
 К нам обратился клиент с просьбой связаться. Вот его данные:
 
 Имя: {{name}}
+Телефон: {{tel}}
 email: {{_replyto}}
 Задача: {{message}}
 
