--- a/templates/mailgun.html
+++ b/templates/mailgun.html
@@ -2,6 +2,8 @@
 
 <p><strong>Имя:</strong> {{name}}</p>
 
+<p><strong>Телефон:</strong> {{tel}}</p>
+
 <p><strong>email:</strong> {{_replyto}}</p>
 
 <p><strong>Задача:</strong> {{message}}</p>
