new email templates

--- a/templates/mailgun-client-en.html
+++ b/templates/mailgun-client-en.html
@@ -1,4 +1,4 @@
-<p>Thank you for contacting Accuraten branding bureau. We will be in touch with you within 1 working day. Be patient and do something great.
+<p>{{name}}, thank you for contacting Accuraten branding bureau. We will be in touch with you within 1 working day.</p>
 
 <p>We have received following info from you.</p>
 
