--- a/templates/mailgun-client-ru.html
+++ b/templates/mailgun-client-ru.html
@@ -1,4 +1,4 @@
-<p>Спасибо, что оставили заявку на сайте Accuraten. Мы свяжемся с вами в течение 1 рабочего дня.</p>
+<p>{{name}}, cпасибо, что оставили заявку на сайте Accuraten. Мы свяжемся с вами в течение 1 рабочего дня.</p>
 
 <p>Мы получили от вас информацию:</p>
 
