--- a/templates/slack.html
+++ b/templates/slack.html
@@ -2,7 +2,7 @@
 
 Имя: {{name}}
 Телефон: {{tel}}
-email: {{_replyto}}
+Email: {{_replyto}}
 Задача: {{message}}
 
 Давайте с ним свяжемся и продадим наши услуги! @dandaka, вперед!
