remove lines, if not filled

--- a/templates/slack.html
+++ b/templates/slack.html
@@ -1,8 +1,8 @@
 К нам обратился клиент с просьбой связаться. Вот его данные:
 
-Имя: {{name}}
-Телефон: {{tel}}
-Email: {{_replyto}}
-Задача: {{message}}
+Имя: {{name:removeLineIfNotExist}}
+Телефон: {{tel:removeLineIfNotExist}}
+Email: {{_replyto:removeLineIfNotExist}}
+Задача: {{message:removeLineIfNotExist}}
 
 Давайте с ним свяжемся и продадим наши услуги! @dandaka, вперед!
